--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,19 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.h2.console.path=/h2
 
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:projetDataBase
-#spring.datasource.username=link64
-#spring.datasource.password=link64
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 #spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+#spring.h2.console.path=/h2
+#
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:finalProjetDataBase;DB_CLOSE_DELAY=-1
+##spring.datasource.url=jdbc:h2:file:finalProjetDataBase
+#spring.datasource.username=root
+#spring.datasource.password=
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
