--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,24 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/projetDataBase?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/finalProjetDataBase?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 
-
+#spring.application.name=Pj-Departement
+#
 #spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+#spring.h2.console.path=/h2-console
 #
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:finalProjetDataBase;DB_CLOSE_DELAY=-1
-##spring.datasource.url=jdbc:h2:file:finalProjetDataBase
+##spring.datasource.url=jdbc:h2:file:./src/main/resources/finalProjetDataBase
 #spring.datasource.username=root
 #spring.datasource.password=
 #
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+#
+##Global configuration
