--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/finalProjetDataBase?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:projetDataBase;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=root64
+spring.datasource.password=root64
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.path=/h2-console
 
-#spring.application.name=Pj-Departement
-#
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:finalProjetDataBase;DB_CLOSE_DELAY=-1
-##spring.datasource.url=jdbc:h2:file:./src/main/resources/finalProjetDataBase
-#spring.datasource.username=root
-#spring.datasource.password=
-#
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#
-##Global configuration
